--- a/src/main/resources/templates/choose_class.html
+++ b/src/main/resources/templates/choose_class.html
@@ -251,15 +251,16 @@ function showMessage() {
           ><p class="choose_class-text14">Select</p></button>
           <div id="message"></div>
         </div>
-          <button
-
+          <a
+            
             src="public/external/button168-05xf-200h.png"
 
             alt="Button168"
 
             class="choose_class-button7 pressione"
+            href="mainmenu"
 
-          ><p class="choose_class-text12">Back</p></button>
+          ><p class="choose_class-text12">Back</p></a>
 
           <button
 
