--- a/src/main/resources/templates/choose_class.html
+++ b/src/main/resources/templates/choose_class.html
@@ -75,13 +75,9 @@
   </script>
 
 <script> 
-function showMessage() { 
-  let message = document.getElementById("message"); 
-  message.textContent = "Selezione avvenuta correttamente"; 
-  message.style.display = "block"; 
-  setTimeout(function() { 
-    message.style.display = "none";
-     }, 4000); }
+  function showMessage() { 
+    alert("Robot scelto correttamente");
+  }
 </script>
 
     <link
@@ -258,7 +254,7 @@ function showMessage() {
             alt="Button168"
 
             class="choose_class-button7 pressione"
-            href="mainmenu"
+            
 
           ><p class="choose_class-text12">Back</p></a>
 
