--- a/src/main/resources/templates/choose_robot.html
+++ b/src/main/resources/templates/choose_robot.html
@@ -40,33 +40,13 @@
     <link rel="stylesheet" href="./style.css" />
 
     <script>
-      let Randoop =document.getElementById("Randoop");
-      let EVOSUITE=document.getElementById("EVOSUITE");
-      let RandoopPremuto=1;
-      
+
       function displayMessage() {
-          if(Randoop.onclick)
-            RandoopPremuto=1;
-         
-       
+          alert("Robot scelto correttamente");
       }
 
-      alert("Robot scelto correttamente");
     </script>
-     
-     <script>
-          let activeButton = null; 
-          function makeButtonActive(buttonId) {
-          let button = document.getElementById(buttonId); 
-          if (button) {
-            if (activeButton) { 
-              activeButton.classList.remove("button-active"); 
-              } 
-              button.classList.add("button-active"); 
-              activeButton = button; 
-              } 
-              }
-    </script>
+
 
 
 
@@ -87,25 +67,26 @@
             <div class="choose_robot-choose_robot">
               <div class="choose_robot-casellacont"></div>
             </div>
-            <a id="Randoop"
-              onclick="makeButtonActive('Randoop')"
+            <a
+              id="Randoop"
               src="public/external/button1174-uu1b-200h.png"
               alt="ButtonRandoop"
               class="choose_robot-buttonrandoop pressione"
             ><p class="choose_robot-textrandoop">RANDOOP</p></a>
-            <a id="EVOSUITE"
-              onclick="makeButtonActive('EVOSUITE')"
+            <a
+              id="EVOSUITE"
               src="public/external/button1175-w7qt-200h.png"
               alt="ButtonEvosuite"
               class="choose_robot-buttonevosuite pressione"
             ><p class="choose_robot-textevosuite">EVOSUITE</p></a>
+            
             <a onclick="displayMessage()"
               src="public/external/button1176-60cl-200h.png"
               alt="ButtonChoose"
               class="choose_robot-buttonchoose pressione"
-              href="mainmenu"
-              
+              href="mainmenu"           
             ><p class="choose_robot-textchoose">CHOOSE</p></a>
+
             <a
               src="public/external/button1177-n1jd-200h.png"
               alt="ButtonCancel"
