--- a/src/main/resources/templates/choose_class.html
+++ b/src/main/resources/templates/choose_class.html
@@ -129,7 +129,7 @@
 
     <script>
       function showMessage() {
-        alert('Robot scelto correttamente');
+        alert('Classe scelta correttamente');
       }
     </script>
 
