--- a/src/main/resources/templates/invite_player.html
+++ b/src/main/resources/templates/invite_player.html
@@ -38,16 +38,16 @@
       data-tag="font"
     />
     <link rel="stylesheet" href="./style.css" />
-<!--
+
     <script>
 
       function displayMessage() {
-          alert("Robot scelto correttamente");
+          alert("amico invitato!");
       }
 
     </script>
 
-  -->
+  
 
 
 
