--- a/src/main/resources/templates/menuprincipale.html
+++ b/src/main/resources/templates/menuprincipale.html
@@ -68,11 +68,11 @@
 
           <div class="menuprincipale-lowerbuttons">
         
-            <button
+          <!--  <button
               src="public/playground_assets/ButtonExit.png"
               alt="ButtonExit"
               class="menuprincipale-buttonexit">
-            </button>
+            </button> -->
          
           </div>
           <span class="menuprincipale-text4"><span>ENACTEST</span></span>
