--- a/src/main/resources/templates/menuprincipale.html
+++ b/src/main/resources/templates/menuprincipale.html
@@ -50,7 +50,8 @@
             
             <a
               src="public/playground_assets/ButtonLungo.png"
-              alt="ButtonCreateMatch"
+              alt="ButtonSinglePlayer"
+              id="ButtonMultiPlayer"
               class="menuprincipale-buttoncreatematch pressione"
               href="mainmenu">
           <p class="menuprincipale-text">SINGLE-PLAYER</p></a>
@@ -58,7 +59,8 @@
 
             <a
               src="public/playground_assets/ButtonLungo.png"
-              alt="ButtonLoadMatch"
+              alt="ButtonMultiPlayer"
+              id="ButtonMultiPlayer"
               class="menuprincipale-buttonSinglePlayer pressione"
               href="multiplayermenu">
               <p class="menuprincipale-text2">MULTIPLAYER</p>
